--- a/cladocopium_its.html
+++ b/cladocopium_its.html
@@ -4,12 +4,7 @@
     <meta charset="UTF-8">
     <title>The ITS sequence in coral symbiotic algae</title>
     <style>
-/*        body {
-            font-family: Arial, sans-serif;
-            margin: 40px;
-            line-height: 1.6;
-        }
-*/        
+
         body {
             font-family: 'Nunito', sans-serif;
             margin: 40px;
@@ -17,23 +12,6 @@
             color: #333;
             line-height: 1.6;
         }
-
-
-        /*img {
-            max-width: 400px;
-            height: auto;
-            display: block;
-            margin-bottom: 20px;
-        }*/
- /*       .sequence {
-            font-family: monospace;
-            white-space: normal;
-            word-wrap: break-word;    
-            overflow-wrap: break-word;
-            background-color: #f4f4f4;
-            padding: 10px;
-            border-left: 4px solid #ccc;
-        }  */
 
         .section {
             background-color: #f9f9f9;
@@ -89,6 +67,26 @@
       color: #444;
     }
 
+    .image-container {
+  max-width: 1000px;
+  margin: 1rem auto;
+  text-align: center;
+}
+
+.image-container img {
+  width: 100%;
+  height: auto;
+  display: block;
+  border-radius: 8px;
+}
+
+.attribution {
+  font-size: 0.9rem;
+  color: #666;
+  margin-top: 0.5rem;
+}
+
+
     </style>
 </head>
 <body>
@@ -104,8 +102,12 @@
     
     <div class="section">
         <h3>Organism: Vertically transmitted symbiont (<i>Cladocopium C15</i>)</h3>
-        <img src="images/cladocopium.png" alt="Vertically transmitted symbiont">
-
+        <div class="image-container">
+            <img src="images/cladocopium.png" alt="Vertically transmitted symbiont">
+            <p class="attribution">Image by Allisonmlewis - Own work, CC BY-SA 4.0</p>
+        </div>
+    </div>
+    <div class="section">
         <p>Reef building corals are able to grow and thrive because they partner with microscopic algae.  The algae, known as symbionts, are able to produce energy through photosynthesis and receive nutrients and shelter from the coral.  This particular species of coral symbiont is quite special.  It is passed down directly by mother corals, through eggs, to their offspring.</p>
         <p>Researchers at JCU and AIMS are studying the conditions that allow some symbionts to associate with many coral species, whereas other symbionts (such as this one) are much more faithful to one species of coral.  As an important step in this research, PhD student Sophie Renton is sequencing the genome of this species of symbiont</p>
     </div>
