--- a/cladocopium_psba.html
+++ b/cladocopium_psba.html
@@ -4,12 +4,7 @@
     <meta charset="UTF-8">
     <title>The psbA gene in coral symbiotic algae</title>
     <style>
-/*        body {
-            font-family: Arial, sans-serif;
-            margin: 40px;
-            line-height: 1.6;
-        }
-*/        
+
         body {
             font-family: 'Nunito', sans-serif;
             margin: 40px;
@@ -17,23 +12,6 @@
             color: #333;
             line-height: 1.6;
         }
-
-
-        /*img {
-            max-width: 400px;
-            height: auto;
-            display: block;
-            margin-bottom: 20px;
-        }*/
- /*       .sequence {
-            font-family: monospace;
-            white-space: normal;
-            word-wrap: break-word;    
-            overflow-wrap: break-word;
-            background-color: #f4f4f4;
-            padding: 10px;
-            border-left: 4px solid #ccc;
-        }  */
 
         .section {
             background-color: #f9f9f9;
@@ -89,6 +67,26 @@
       color: #444;
     }
 
+    .image-container {
+  max-width: 1000px;
+  margin: 1rem auto;
+  text-align: center;
+}
+
+.image-container img {
+  width: 100%;
+  height: auto;
+  display: block;
+  border-radius: 8px;
+}
+
+.attribution {
+  font-size: 0.9rem;
+  color: #666;
+  margin-top: 0.5rem;
+}
+
+
     </style>
 </head>
 <body>
@@ -104,8 +102,12 @@
     
     <div class="section">
         <h3>Organism: Horizontally transmitted coral symbiont (<i>Cladocopium proliferum</i>)</h3>
-        <img src="images/cladocopium.png" alt="Horizontally transmitted coral symbiont">
-
+        <div class="image-container">
+            <img src="images/cladocopium.png" alt="Horizontally transmitted coral symbiont">
+            <p class="attribution">Image by Allisonmlewis - Own work, CC BY-SA 4.0</p>
+        </div>
+    </div>
+    <div class="section">
         <p>Reef building corals are able to grow and thrive because they partner with microscopic algae.  The algae, known as symbionts, are able to produce energy through photosynthesis and receive nutrients and shelter from the coral.  This particular species of coral symbiont is commonly found in branching corals in reefs close to Townsville.  </p>
         <p>Researchers at JCU and AIMS are studying the conditions that allow some symbionts such as this one to associate with many coral species, whereas other symbionts are much more faithful to one species of coral.  </p>
     </div>
