--- a/dugong_SLC4A11.html
+++ b/dugong_SLC4A11.html
@@ -4,12 +4,7 @@
     <meta charset="UTF-8">
     <title>The SLC4A11 gene in Dugongs</title>
     <style>
-/*        body {
-            font-family: Arial, sans-serif;
-            margin: 40px;
-            line-height: 1.6;
-        }
-*/        
+
         body {
             font-family: 'Nunito', sans-serif;
             margin: 40px;
@@ -17,23 +12,6 @@
             color: #333;
             line-height: 1.6;
         }
-
-
-        /*img {
-            max-width: 400px;
-            height: auto;
-            display: block;
-            margin-bottom: 20px;
-        }*/
- /*       .sequence {
-            font-family: monospace;
-            white-space: normal;
-            word-wrap: break-word;    
-            overflow-wrap: break-word;
-            background-color: #f4f4f4;
-            padding: 10px;
-            border-left: 4px solid #ccc;
-        }  */
 
         .section {
             background-color: #f9f9f9;
@@ -89,6 +67,26 @@
       color: #444;
     }
 
+    .image-container {
+  max-width: 1000px;
+  margin: 1rem auto;
+  text-align: center;
+}
+
+.image-container img {
+  width: 100%;
+  height: auto;
+  display: block;
+  border-radius: 8px;
+}
+
+.attribution {
+  font-size: 0.9rem;
+  color: #666;
+  margin-top: 0.5rem;
+}
+
+
     </style>
 </head>
 <body>
@@ -104,8 +102,12 @@
     
     <div class="section">
         <h3>Organism: Dugong (<i>Dugong dugon</i>)</h3>
-        <img src="images/Dugong.jpeg" alt="Dugong">
-
+        <div class="image-container">
+            <img src="images/Dugong.jpeg" alt="Dugong">
+            <p class="attribution">Image by Gejuni - Own work, CC BY-SA 3.0 de</p>
+        </div>
+    </div>
+    <div class="section">
         <p>Dugongs are marine mammals that graze on seagrass. Around the world Dugongs are threatened by habitat loss and hunting.  </p>
         <p>PhD student Eva Paulus is sequencing the genomes of hundreds of dugongs to assess their movement and population status across northern Australia</p>
     </div>
